--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -39,7 +39,7 @@ services:
 
 
   workflow:
-    image: gitlab.libriciel.fr:4567/outils/workflow:latest
+    image: gitlab.libriciel.fr:4567/outils/workflow:develop
     ports:
       - 10080:8080
 
@@ -48,6 +48,24 @@ services:
     image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-crypto:develop
     ports:
       - 8085:8080
+
+
+  flowable-rest:
+    image: flowable/flowable-rest:6.5.0
+    tty: true
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/flowable
+      - SPRING_DATASOURCE_USERNAME=flowable
+      - SPRING_DATASOURCE_PASSWORD=flowable
+      - SPRING_DATASOURCE_DRIVER-CLASS-NAME=org.postgresql.Driver
+      - FLOWABLE_REST_APP_ADMIN_USER-ID=kermit
+      - FLOWABLE_REST_APP_ADMIN_PASSWORD=kermit
+    ports:
+      - 9988:8080
 
 
   pdf-stamp:
