--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -47,6 +47,10 @@ server {
     proxy_pass http://host.docker.internal:10080/workflow;
   }
 
+	location /alfresco {
+	  proxy_pass http://host.docker.internal:9000/alfresco;
+	}
+
   location /pdf-stamp {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
