--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
 
 
   web:
-    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-web:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-web:develop
     <<: *commons
     <<: *nginx_memory_limit
 
@@ -94,7 +94,7 @@ services:
 
 
   workflow:
-    image: gitlab.libriciel.fr:4567/outils/workflow:latest
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/workflow:latest
     <<: *commons
     <<: *springboot_memory_limit
     volumes:
