--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -47,17 +47,17 @@ server {
     proxy_pass http://host.docker.internal:10080/workflow;
   }
 
-	location /alfresco {
-	  proxy_pass http://host.docker.internal:9000/alfresco;
-	}
+  location /alfresco {
+    proxy_pass http://host.docker.internal:9000/alfresco;
+  }
 
   location /pdf-stamp {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
 
-  location /libersign {
-    proxy_pass http://libersign/;
-  }
+  // location /libersign {
+  //  proxy_pass http://libersign/;
+  // }
 
   location ^~ / {
     proxy_pass http://host.docker.internal:4200/;
