--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -51,9 +51,9 @@ server {
     proxy_pass http://pdf-stamp:8080/pdf-stamp;
   }
 
-  location /libersign {
-    proxy_pass http://libersign/;
-  }
+  # location /libersign {
+  #   proxy_pass http://libersign/;
+  # }
 
   location ^~ / {
     proxy_pass http://web:80/;
