--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -55,9 +55,9 @@ server {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
 
-  // location /libersign {
-  //  proxy_pass http://libersign/;
-  // }
+  # location /libersign {
+  #  proxy_pass http://libersign/;
+  # }
 
   location ^~ / {
     proxy_pass http://host.docker.internal:4200/;
