--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -51,6 +51,11 @@ server {
     proxy_pass http://pdf-stamp:8080/pdf-stamp;
   }
 
+  location /pes-viewer {
+      proxy_intercept_errors off;
+      proxy_pass http://pes-viewer:8888/;
+  }
+
   # location /libersign {
   #   proxy_pass http://libersign/;
   # }
