--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -55,6 +55,11 @@ server {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
 
+  location /pes-viewer {
+    proxy_intercept_errors off;
+    proxy_pass http://host.docker.internal:8889/pes-viewer;
+  }
+
   # location /libersign {
   #  proxy_pass http://libersign/;
   # }
