--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -24,6 +24,7 @@ server {
   # ssl_certificate_key /etc/nginx/ssl/iparapheur.dom.local.key;
 
   client_max_body_size 2000M;
+  large_client_header_buffers 4 32k;
 
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
