--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -52,7 +52,7 @@ server {
     proxy_pass http://pdf-stamp:8080/pdf-stamp;
   }
 
-  location /pes-viewer {
+  location /bl-xemwebviewer {
       proxy_intercept_errors off;
       proxy_pass http://pes-viewer:8888/;
   }
