--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -56,9 +56,9 @@ server {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
 
-  location /pes-viewer {
-    proxy_intercept_errors off;
-    proxy_pass http://host.docker.internal:8889/pes-viewer;
+  location /bl-xemwebviewer {
+      proxy_intercept_errors off;
+      proxy_pass http://host.docker.internal:8889/bl-xemwebviewer;
   }
 
   # location /libersign {
