--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -56,14 +56,14 @@ server {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
 
+  location /libersign {
+    proxy_pass http://libersign:80/libersign;
+  }
+
   location /bl-xemwebviewer {
       proxy_intercept_errors off;
       proxy_pass http://host.docker.internal:8889/bl-xemwebviewer;
   }
-
-  # location /libersign {
-  #  proxy_pass http://libersign/;
-  # }
 
   location ^~ / {
     proxy_pass http://host.docker.internal:4200/;
