--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,10 +81,11 @@ services:
       - ./data/pes-viewer/pesPJ:/pesPJ/
 
 
-  # libersign:
-  #  image: gitlab.libriciel.fr:4567/libriciel/pole-signature/signature/libersign:1.9.10
-  #  <<: *commons
-  #  <<: *nginx_memory_limit
+  libersign:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/signature/libersign:1.10.1
+    restart: always
+    tty: true
+    mem_limit: 64M
 
 
   workflow:
