--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -52,6 +52,10 @@ server {
     proxy_pass http://pdf-stamp:8080/pdf-stamp;
   }
 
+  location /libersign {
+    proxy_pass http://libersign:80/libersign;
+  }
+
   location /bl-xemwebviewer {
       proxy_intercept_errors off;
       proxy_pass http://pes-viewer:8888/;
