add pesViewer to ip-core configuration

--- a/src/main/resources/core/application.yml
+++ b/src/main/resources/core/application.yml
@@ -50,6 +50,10 @@ services:
     provider: pdfstamp
     host: pdf-stamp
     port: 8080
+  pesviewer:
+    provider: pesviewer
+    host: pes-viewer
+    port: 8888
   auth:
     provider: keycloak
     host: keycloak
