fix pes-viewer front-end access

--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -58,7 +58,7 @@ server {
 
   location /bl-xemwebviewer {
       proxy_intercept_errors off;
-      proxy_pass http://pes-viewer:8888/;
+      proxy_pass http://pes-viewer:8888/bl-xemwebviewer;
   }
 
   # location /libersign {
