Add appropriate quartz DB url override in main application properties.
Not used yet, as the version of 'core' referenced
does not include quartz feature, but now it's ready for when it is updated.

--- a/src/main/resources/core/application.yml
+++ b/src/main/resources/core/application.yml
@@ -89,6 +89,9 @@ spring:
     database-platform: org.hibernate.dialectPostgreSQL9Dialect
     hibernate.ddl-auto: update
   main.allow-bean-definition-overriding: true
+  quartz.properties.org.quartz:
+    dataSource.quartzDS:
+      URL: jdbc:postgresql://postgres:5432/quartz
 
 keycloak:
   auth-server-url: http://iparapheur.dom.local/auth
