--- a/src/main/resources/core/application.yml
+++ b/src/main/resources/core/application.yml
@@ -67,11 +67,10 @@ services:
       password: keycloak
 
 spring:
-  #cache:
-  #  type: redis
-  #redis:
-  #  host: redis
-  #  port: 6379
+  cache.type: redis
+  redis:
+    host: redis
+    port: 6379
   servlet.multipart:
     maxFileSize: 5GB
     maxRequestSize: 5GB
