--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -76,9 +76,9 @@ services:
 spring:
   #cache:
   #  type: redis
-  #redis:
-  #  host: redis
-  #  port: 6379
+  redis:
+   host: iparapheur.dom.local
+   port: 6379
   servlet.multipart:
     maxFileSize: 5GB
     maxRequestSize: 5GB
