--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -57,7 +57,7 @@ server {
   }
 
   location /libersign {
-    proxy_pass http://libersign:80/libersign;
+    proxy_pass http://host.docker.internal:8079/libersign;
   }
 
   location /bl-xemwebviewer {
