Appropriate default logo and messages

--- a/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
+++ b/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
@@ -1,8 +1,7 @@
 parent=libriciel
-# Ce message est désactivé
-# infoMessage=Ceci est le message d'information a afficher en haut de page
-logoMessage=Bienvenue sur la nouvelle page de connexion Pastell
 
+logoMessage=Bienvenue sur la page de connexion iParapheur
+
+# Ce message est désactivé
 infoMessage=
 productImage=iparapheur.svg
-logoImage=logo.jpg
