--- a/src/main/resources/keycloak/themes/libriciel/login/theme.properties
+++ b/src/main/resources/keycloak/themes/libriciel/login/theme.properties
@@ -5,5 +5,5 @@ locales=fr
 
 infoMessage=Ceci est le message d'information a afficher en haut de page
 productImage=product.svg
-logoImage=logo.jpg
-logoMessage=Bienvenue sur l'instance de developpement
+logoImage=logo-ls.png
+logoMessage=Développons ensemble vos projets de demain
