--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,12 @@ services:
                   -Dalfresco.port=8080
                   -Dalf.root=/var/lib/alfresco
 
+                  -Dsolr.host=solr6
+                  -Dsolr.port=8983
+                  -Dsolr.secureComms=none
+                  -Dsolr.base.url=/solr
+                  -Dindex.subsystem.name=solr6
+
                   -Dheartbeat.enabled=false
                   -Dtransform.service.enabled=false
                   -Dlocal.transform.service.enabled=false
@@ -152,6 +158,21 @@ services:
       # Details on (Deployment - App Server) -> https://docs.alfresco.com/6.2/references/dev-extension-points-content-model-define-and-deploy.html
       - ./src/main/resources/content/custom-model.xml:/usr/local/tomcat/shared/classes/alfresco/extension/custom-model.xml
       - ./src/main/resources/content/custom-model-context.xml:/usr/local/tomcat/shared/classes/alfresco/extension/custom-model-context.xml
+
+  solr6:
+    image: alfresco/alfresco-search-services:2.0.1
+    mem_limit: 2g
+    depends_on:
+      - alfresco
+    environment:
+      # https://github.com/Alfresco/acs-community-deployment/blob/master/docker-compose/docker-compose.yml
+      - SOLR_ALFRESCO_HOST=alfresco
+      - SOLR_ALFRESCO_PORT=8080
+      - SOLR_SOLR_HOST=solr6
+      - SOLR_SOLR_PORT=8983
+      - SOLR_CREATE_ALFRESCO_DEFAULTS=alfresco,archive
+      - ALFRESCO_SECURE_COMMS=none
+      - "SOLR_JAVA_MEM=-Xms2g -Xmx2g"
 
 
   #libreoffice:
