Disabling unused Alfresco component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,6 +148,7 @@ services:
                   -Dlocal.transform.service.enabled=false
                   -Dlegacy.transform.service.enabled=false
                   -Dmessaging.subsystem.autoStart=false
+                  -Dsystem.workflow.engine.activiti.enabled=false
                   "
     depends_on:
       postgres:
