--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -273,3 +273,21 @@ services:
       - MYSQL_DATABASE=matomo
       - MYSQL_USER=matomo
       - MYSQL_PASSWORD=matomo
+
+
+  vault:
+    image: vault:1.6.2
+    restart: always
+    tty: true
+    environment:
+      - VAULT_ADDR=http://0.0.0.0:8200
+      - VAULT_API_ADDR=http://0.0.0.0:8200
+      - VAULT_ADDRESS=http://0.0.0.0:8200
+    cap_add:
+      - IPC_LOCK
+    command: vault server -config=/vault/config/vault.json
+    volumes:
+      - ./src/main/resources/vault/config:/vault/config
+      - ./src/main/resources/vault/policies:/vault/policies
+      - ./data/vault/data:/vault/data
+
