--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,7 +173,7 @@ services:
       - SOLR_SOLR_PORT=8983
       - SOLR_CREATE_ALFRESCO_DEFAULTS=alfresco,archive
       - ALFRESCO_SECURE_COMMS=none
-      - "SOLR_JAVA_MEM=-Xms2g -Xmx2g"
+      - "SOLR_JAVA_MEM=-Xms1024m -Xmx1024m"
     volumes:
       # https://hub.alfresco.com/t5/alfresco-content-services-blog/managing-alfresco-search-services-1-4-storage/ba-p/300972
       - ./data/solr/contentstore:/opt/alfresco-search-services/contentstore
