--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -60,6 +60,30 @@ server {
     proxy_pass http://host.docker.internal:8079/libersign;
   }
 
+  location = /matomo/index.php {
+    include             fastcgi_params;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/index.php;
+    fastcgi_pass        matomo:9000;
+  }
+
+  location = /matomo/piwik.php {
+    include             fastcgi_params;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/piwik.php;
+    fastcgi_pass        matomo:9000;
+  }
+
+  location = /matomo/matomo.php {
+    include             fastcgi_params;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/matomo.php;
+    fastcgi_pass        matomo:9000;
+  }
+
+  # Matomo: serving static files (don't put trailing slash on it)
+  location /matomo {
+    alias               /var/www/html;
+    try_files           $uri $uri/ =404;
+  }
+
   location /bl-xemwebviewer {
       proxy_intercept_errors off;
       proxy_pass http://host.docker.internal:8889/bl-xemwebviewer;
