--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -56,26 +56,15 @@ server {
     proxy_pass http://libersign:80/libersign;
   }
 
-  location = /matomo/index.php {
+  location ~ /matomo/(?<phpFile>index|piwik|matomo).php {
     include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/index.php;
-    fastcgi_pass        matomo:9000;
-  }
-
-  location = /matomo/piwik.php {
-    include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/piwik.php;
-    fastcgi_pass        matomo:9000;
-  }
-
-  location = /matomo/matomo.php {
-    include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/matomo.php;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/$phpFile.php;
     fastcgi_pass        matomo:9000;
   }
 
   # Matomo: serving static files (don't put trailing slash on it)
   location /matomo {
+    index               index.php;
     alias               /var/www/html;
     try_files           $uri $uri/ =404;
   }
