--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -264,6 +264,8 @@ services:
     mem_limit: 1024M
     volumes:
       - matomo:/var/www/html
+      - ./data/matomo/config/:/var/www/html/config/
+      - ./data/matomo/plugins/:/var/www/html/plugins/
     depends_on:
       - matomo-db
     environment:
