--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -32,6 +32,7 @@ server {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_http_version 1.1;
 
+
   location /auth {
     proxy_pass http://host.docker.internal:9090/auth;
   }
@@ -60,26 +61,15 @@ server {
     proxy_pass http://host.docker.internal:8079/libersign;
   }
 
-  location = /matomo/index.php {
+  location ~ /matomo/(?<phpFile>index|piwik|matomo).php {
     include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/index.php;
-    fastcgi_pass        matomo:9000;
-  }
-
-  location = /matomo/piwik.php {
-    include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/piwik.php;
-    fastcgi_pass        matomo:9000;
-  }
-
-  location = /matomo/matomo.php {
-    include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/matomo.php;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/$phpFile.php;
     fastcgi_pass        matomo:9000;
   }
 
   # Matomo: serving static files (don't put trailing slash on it)
   location /matomo {
+    index               index.php;
     alias               /var/www/html;
     try_files           $uri $uri/ =404;
   }
