--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -61,9 +61,21 @@ server {
     proxy_pass http://host.docker.internal:8079/libersign;
   }
 
-  location ~ /matomo/(?<phpFile>index|piwik|matomo).php {
+  location = /matomo/index.php {
     include             fastcgi_params;
-    fastcgi_param       SCRIPT_FILENAME     /var/www/html/$phpFile.php;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/index.php;
+    fastcgi_pass        matomo:9000;
+  }
+
+  location = /matomo/piwik.php {
+    include             fastcgi_params;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/piwik.php;
+    fastcgi_pass        matomo:9000;
+  }
+
+  location = /matomo/matomo.php {
+    include             fastcgi_params;
+    fastcgi_param       SCRIPT_FILENAME     /var/www/html/matomo.php;
     fastcgi_pass        matomo:9000;
   }
 
