add external signature connector

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -57,6 +57,11 @@ services:
     ports:
       - 10080:8080
 
+  external-signature-connector:
+    build:
+      context: ../external-signature-connector
+    ports:
+      - 2757:8080
 
   crypto:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-crypto:develop
@@ -128,8 +133,6 @@ services:
     image: redis:6.0-alpine
     mem_limit: 64M
     memswap_limit: 64m
-    ports:
-      - 6379:6379
 
 
   vault:
