--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -58,10 +58,9 @@ services:
       - 10080:8080
 
   external-signature-connector:
-    build:
-      context: ../external-signature-connector
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/external-signature-connector:develop
     ports:
-      - 2757:8080
+      - 8080:8080
 
   crypto:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-crypto:develop
