--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -49,10 +49,7 @@ services:
     host: iparapheur.dom.local
     port: 8085
   stats:
-    provider: matomo
-    host: matomo
-    token: ca46afa897d02da9f44bb876360b0017
-    port: 80
+    provider: none
   pdfstamp:
     provider: pdfstamp
     host: pdf-stamp
