--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -53,6 +53,10 @@ server {
     proxy_pass http://host.docker.internal:9009/alfresco;
   }
 
+  location /external-signature-connector {
+    proxy_pass http://host.docker.internal:2757/external-signature-connector;
+  }
+
   location /pdf-stamp {
     proxy_pass http://host.docker.internal:8889/pdf-stamp;
   }
